<?xml version="1.0"?>
<package>
  <name>robot_sim</name>
  <version>1.0.0</version>
  <description>The robot_sim package. Create the simulation of the robot.</description>

  <maintainer email="mickael.trezzy@gmail.com">Mickaël</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>forward_kinematics</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>

</package>